# scrs

./: AGENT_SETUP.md  Cargo.toml  README.md  Study.md
assets/: README.md  index.html  socketio-client.js  socketio.js
assets/root/: index.html
assets/root/old/: index.html
assets/root/sdk/: README.md  ScrcpyClient.js  ScrcpySocket.js  VideoDecoder.js  index.js
src/: error.rs  main.rs
src/agent/: logger.rs  mod.rs  socket_server.rs
src/agent/actions/: base.rs  input.rs  mod.rs  navigation.rs  swipe.rs  system.rs  touch.rs
src/agent/api/: mod.rs  socketio.rs
src/agent/config/: agent_config.rs  mod.rs
src/agent/context/: conversation.rs  memory.rs  mod.rs
src/agent/core/: agent.rs  agent_group.rs  mod.rs  state.rs  traits.rs
src/agent/examples/: autoglm_usage.rs
src/agent/executor/: device_wrapper.rs  handler.rs  mod.rs  retry.rs
src/agent/llm/: autoglm_client.rs  client.rs  mod.rs  parser.rs  prompts.rs  providers.rs  types.rs
src/agent/pool/: device_entry.rs  device_pool.rs  mod.rs  types.rs
src/api/: api.rs
src/context/: context.rs  mod.rs
src/device/: device.rs
src/logger/: mod.rs
src/scrcpy/: mod.rs  scrcpy.rs
