[package]
name = "scrcpy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
adb_client = {version = "*"}
axum = { version = "0.8.8" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0.7"
socketioxide = "0.18"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

### 文件内嵌
rust-embed = "8"
base64 = "0.22.1"
bytes = "1.9"


[profile.release]
opt-level = "z"        # 优化体积
lto = true            # 链接时优化
codegen-units = 1     # 更好的优化
strip = true          # 去除调试符号
panic = "abort"       # 减小 panic 处理体积