[package]
name = "scrcpy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
adb_client = {version = "*"}
axum = { version = "0.8.8" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0.7"
socketioxide = "0.18"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"

### 文件内嵌
rust-embed = "8"
base64 = "0.22.1"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }

### Agent 相关依赖
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1.0"
regex = "1.10"
image = "0.25"
toml = "0.9"


[profile.release]
opt-level = "z"        # 优化体积
lto = true            # 链接时优化
codegen-units = 1     # 更好的优化
strip = true          # 去除调试符号
panic = "abort"       # 减小 panic 处理体积